# spot_gazebo_ros2

./: README.md
spot_bringup/: CMakeLists.txt  package.xml  setup.py
spot_bringup/config/: dlo_localization.rviz  dlo_mapping.rviz  far_planner.yaml  lio_localization.yaml  navigation.rviz  spot.rviz  spot_bridge.yaml
spot_bringup/launch/: dlo.launch.py  dlo.localization.launch.py  dlo.mapping.launch.py  far_planner.launch.py  fast_lio_sim.launch.py  lio_localization.launch.py  publish_map.launch.py  spot.gazebo.launch.py  spot.navigation.launch.py
spot_bringup/rviz/: dlo_localization.rviz
spot_bringup/scripts/: thermal_to_rgb.py
spot_bringup/spot_bringup/: pointcloud_transform.py
spot_bringup/src/: map_publisher.cpp  pointcloud_transform.cpp
spot_description/models/spot/: model.sdf
spot_gazebo/: CMakeLists.txt
spot_gazebo/include/spot_gazebo/: FullSystem.hh
spot_gazebo/src/: FullSystem.cc
spot_gazebo/worlds/: edgar_mine.sdf  electrical_substation_v3.sdf  empty.world  empty_room.sdf  simple_tunnel.sdf  simplify_collision_mesh.py  tugbot_warehouse.sdf
spot_gazebo/worlds/meshes/collision/: Edgar_Section_02_Collision.stl  Edgar_Section_05_simplified.stl
spot_navigation/: setup.py
spot_navigation/config/: dlo.rviz  dlo_localization.rviz  icp_localization.rviz  icp_localization_params.yaml  lidarslam.yaml  localization.yaml  nav2_params.yaml  spot_nav.rviz  spot_nav_obstacle_avoidance.rviz  spot_navigation.rviz
spot_navigation/launch/: dlo.launch.py  dlo.localization.launch.py  dlo.mapping.launch.py  icp_localization.launch.py  lidar_localization.launch.py  lidarslam.launch.py  local_planner.launch.py  localization_launch.py  localization_slam_toolbox_launch.py  planner.launch.py  publish_map.launch.py  spot.navigation.launch.py  spot_navigation.launch.py
spot_navigation/maps/: simple_tunnel.pcd  simple_tunnel.pgm  simple_tunnel.yaml
spot_navigation/rviz/: dlo_localization.rviz  far_planner.rviz
spot_navigation2/config/: nav2_params.yaml
spot_navigation2/launch/: localization_launch.py  online_async_launch.py
spot_navigation2/maps/: simple_tunnel.pgm
